--- a/web-design-for-kids-wrap-up.html
+++ b/web-design-for-kids-wrap-up.html
@@ -1,59 +1,59 @@
 ﻿<div class="post-body__content">
 <h1> การทำเว็บไซต์สำหรับเด็ก - บทสรุป </h1>
-<p> และแล้ว เราทำได้!  เราได้สร้างเว็บไซต์เว็บแรกจากที่ไม่มีอะไรเลยและเราก็ได้คุยเกี่ยวกับส่วนประกอบพื้นฐานของการออกแบบเช่นพื้นที่ว่าง รูปแบบตัวอักษร และ เรื่องเกี่ยวกับสี </p>
-<p> ในบทเรียนสุดท้ายนี้เราจะรีวิวทุกสิ่งทุกอย่างอย่างรวดเร็ว เราได้เรียนรู้เกี่ยวกับการสร้างเว็บไซต์และการออกแบบ รีวิวมันและเอามันขึ้นบนอินเทอร์เน็ต ดังนั้นเราสามารถเอาให้เพื่อนๆหรือครอบครัวดูโดยใช้ web address และสัมผัสเกี่ยวกับแหล่งข้อมูลอ้างอิงที่จำเป็นนิดหน่อย ระหว่างการเรียนของเรา </p>
+<p> และแล้วเราก็ทำได้!  เราได้สร้างเว็บไซต์เว็บแรกจากที่ไม่มีอะไรเลยและเราก็ได้คุยเกี่ยวกับส่วนประกอบพื้นฐานของการออกแบบเช่นพื้นที่ว่าง รูปแบบตัวอักษร และ เรื่องเกี่ยวกับสี </p>
+<p> ในบทเรียนสุดท้ายนี้เราจะรีวิวทุกสิ่งทุกอย่างอย่างรวดเร็ว เราได้เรียนรู้เกี่ยวกับการสร้างเว็บไซต์และการออกแบบ รีวิวมันและเอามันขึ้นบนอินเทอร์เน็ต ดังนั้นเราสามารถเอาให้เพื่อนๆหรือครอบครัวดูโดยใช้เว็บแอดเดรส (Web Address) และมาดูเกี่ยวกับแหล่งข้อมูลอ้างอิงที่จำเป็นนิดหน่อย เพื่อต่อยอดการเรียนของเรา </p>
 <p> อย่าลืมที่จะถามคำถามสุดท้ายในกล่องคอมเม้นต์ด้านล่าง </p>
 <h2> ทบทวนบทเรียน </h2>
 <p> ลองมองดูแผนที่ซีรีย์ที่เราผ่านมานี้เพื่อดูว่าตอนนี้เราอยู่ที่ไหน </p>
 <figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/map11.svg"></figure><h3> การเริ่มต้นและการเตรียมพร้อม </h3>
 <p> เราเริ่มต้นบทเรียนนี้โดยการเกริ่นนำว่าเว็บนั้นทำงานได้อย่างไร  ในการที่คอมพิวเตอร์ที่ต่างกันสองเครื่องติดต่อสื่อสารกันโดยพวกมันติดต่อกันผ่านอินเทอร์เน็ตโดยใช้ ISP (Internet Service Provider) </p>
-<p> เพื่อทำให้คนอื่นๆ สามารถรีวิวเว็บไซต์ของเราบนอินเทอร์เน็ตได้ ไฟล์เหล่านี้ต้องส่งผ่าน (เคลื่อนย้าย) ไปที่เซิฟเวอร์ - เครื่องคอมพิวเตอร์หลักที่ต่อตรงกับอินเทอร์เน็ต  เราจะทำสิ่งเหล่านี้อย่างมากในส่วนด้านล่างนี้ </p>
-<p> ฐานะบนอินเทอร์เน็ตของนักออกแบบเว็บ  มันเป็นงานของเราที่จะให้แน่ใจว่าเว็บไซต์นั้นน่าตื่นตาตื่นใจและง่ายในการใช้อย่างที่สุดสำหรับผู้ใช้งานของเราเข้ามาอ่านและท่องไปบนเว็บ </p>
-<p> ด้วยเป้าหมายที่วางไว้ในใน เราจะตั้งค่าสิ่งก่อสร้างในเมืองในฝันเราด้วย HTML และ CSS หลังจากลองวาดภาพพวกมันลงบนกระดาษแล้ว  ในการเตรียมส่วนนี้ของการดำเนินงาน เราจะต้องเรียนรู้ทั้งหมดเกี่ยวกับการตั้งชื่อไฟล์และการจัดการไฟล์ทั้งหมด </p>
+<p> เพื่อทำให้คนอื่นๆ สามารถเข้ามาดูเว็บไซต์ของเราบนอินเทอร์เน็ตได้ ไฟล์เหล่านี้ต้องส่งผ่านหรือย้ายไปไว้ที่เซิฟเวอร์ (เครื่องคอมพิวเตอร์หลักที่ต่อตรงกับอินเทอร์เน็ต)  เราจะทำสิ่งเหล่านี้กันเพิ่มเติมในส่วนด้านล่างนี้ </p>
+<p> หน้าที่บนอินเทอร์เน็ตของนักออกแบบเว็บ  มันเป็นงานของเราที่จะให้แน่ใจว่าเว็บไซต์นั้นน่าตื่นตาตื่นใจและง่ายในการใช้อย่างที่สุดสำหรับผู้ใช้งานของเราเข้ามาอ่านและท่องไปบนเว็บ </p>
+<p> ด้วยเป้าหมายที่วางไว้ในใจ เราจะตั้งค่าสิ่งก่อสร้างในเมืองในฝันเราด้วย HTML และ CSS หลังจากลองวาดภาพพวกมันลงบนกระดาษแล้ว  ในการเตรียมส่วนนี้ของการดำเนินงาน เราจะต้องเรียนรู้ทั้งหมดเกี่ยวกับการตั้งชื่อไฟล์และการจัดการไฟล์ทั้งหมด </p>
 <figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/files11.svg"></figure><p> เรารู้ขณะนี้ไฟล์ HTML หลักของเรามักจะชื่อ <em>index.html</em> และรูปภาพอื่นๆ ใดๆ ก็ตามจะอยู่ที่โฟลเดอร์ของเราจะขึ้นตรงกับแอตทริบิวต์ <code class="inline">src</code> ใน HTML </p>
 <p> สุดท้าย เราได้เลือก text editor และเริ่มต้นอย่างเป็นทางการในการเขียน HTML และ CSS เสียที </p>
 <h3> การสร้างเว็บไซต์ด้วย HTML และ CSS </h3>
 <p> เพื่อสร้างเว็บไซต์เมืองในฝันของเรา เราจะเริ่มใช้โครงสร้าง HTML จากนั้นก็ใส่ไปด้วยเนื้อหา </p>
-<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/htmlpreview11.svg"></figure><p> โครงสร้างนั้นจะถูกสร้างขึ้นด้วยอิลิเมนต์หลากหลายใส่ไว้อยู่ภายในอิลิเมนต์ <code class="inline">html</code> หลัก และจากจุดเริ่มต้นนี้ ทำให้การใส่เนื้อหาของเราเป็นไปได้ด้วยดี </p>
+<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/htmlpreview11.svg"></figure><p> โครงสร้างนั้นจะถูกสร้างขึ้นด้วยอิลิเมนต์หลากหลายใส่ไว้อยู่ภายในอิลิเมนต์หลัก <code class="inline">html</code> และจากจุดเริ่มต้นนี้ ทำให้การใส่เนื้อหาของเราเป็นไปได้ด้วยดี </p>
 <figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/html11.svg"></figure><p> เมื่อเนื้อหาพร้อมแล้ว เราก็ได้เริ่มสไตล์ทุกอย่างด้วย CSS  อย่างแรกที่เราต้องการเชื่อมสองเอกสารเข้าด้วยกันใน <code class="inline">head</code> ของ HTML </p>
 <pre class="brush: html noskimlinks noskimwords">&lt;head&gt;
     &lt;link type="text/css" rel="stylesheet" href="tutstown.css" /&gt;
 &lt;/head&gt;</pre>
 <p> ในไฟล์ CSS เรายังสามารถประกาศสี ขนาด เลย์เอ้าท์ และ อิลิเมนต์อีกมากภายในเอกสาร HTML เพื่อให้ตรงกับการออกแบบที่เสร็จสมบูรณ์ </p>
 <figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/sitepreview11.svg"></figure><h3> รูปภาพ (Image) </h3>
-<p> ในส่วนนี้ยังมีซีรีย์ที่เสร็จแล้วในบทเรียนที่เราคุยเกี่ยวกับภาพที่แตกต่างกันที่ให้เราดู  เราได้คุยเกี่ยวกับการใส่พวกมันใน HTML ของเราและเพิ่มเอฟเฟ็กต์บางอย่าง เราสามารถในมันไปที่รูปภาพด้วย CSS เช่นการเปลี่ยนค่า <i>opacity</i> ให้พวกมัน </p>
+<p> ในส่วนนี้ยังมีซีรีย์ที่เสร็จแล้วในบทเรียนที่เราคุยเกี่ยวกับภาพที่แตกต่างกันที่ให้เราดู  เราได้คุยเกี่ยวกับการใส่พวกมันใน HTML ของเราและเพิ่มเอฟเฟ็กต์บางอย่าง เราสามารถใส่มันไปที่รูปภาพด้วย CSS เช่นการเปลี่ยนค่า <i>opacity</i> ให้พวกมัน </p>
 <figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/opacity11.svg"></figure><p> และอย่างที่กล่าวถึง รูปภาพทั้งหมดที่ถูกใช้ในเมืองในฝันซีรีย์จะเป็นไฟล์ SVG หมายถึงพวกมันสามารถย่อขยายขนาดได้ไม่จำกัดและไม่สูญเสียคุณภาพเมื่อแก้ไขมัน </p>
 <h3> พื้นฐานการออกแบบ </h3>
 <p> หลังจากที่เราได้สร้างเว็บไซต์แล้ว เราจะมาทบทวนถึงแนวคิดพื้นฐานการออกแบบที่ช่วยเราถึงอารมณ์ ความรู้สึกและการการใช้งานเว็บไซต์ </p>
-<p> เนื้อหาคือส่วนที่สำคัญที่สุดของการออกแบบเว็บ ดังนั้นหลังจากจัดการเรียบร้อยแล้วว่าเนื้อหาของเรานั้นมีประโยชน์ เป็นที่ต้องการ และถูกคัดกรองมาอย่างมี เราก็มาดูเรื่องมุมมองของเว็บต่อได้เลย </p>
+<p> เนื้อหาคือส่วนที่สำคัญที่สุดของการออกแบบเว็บ ดังนั้นหลังจากจัดการเรียบร้อยแล้วว่าเนื้อหาของเรานั้นมีประโยชน์ เป็นที่ต้องการ และถูกคัดกรองมาอย่างดี เราก็มาดูเรื่องมุมมองของเว็บต่อได้เลย </p>
 <figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/balloon11.svg"></figure><p> ลำดับชั้นของมุมมองนั้นสำคัญสำหรับเว็บไซต์ ก็มีเรื่องที่ต้องดูเช่น ขนาดตัวอักษร สี และพื้นที่ว่าง อย่างเช่นบอลลูนด้านบนถูกออกแบบเพื่อดึงดูดสายตาจากวัตถุอื่นๆ </p>
 <h3> การออกแบบตัวอักษร (Typography) </h3>
 <p> การออกแบบตัวอักษรอยู่ทุกๆที่ที่เราเห็นตัวอักษรและคือหนึ่งสิ่งที่สำคัญของการออกแบบเว็บ  ผู้ใช้งานของเราต้องการที่จะสามารถอ่านเนื้อหาของเราได้แต่เราก็ยังต้องการให้แน่ใจว่าฟ้อนท์ที่เราเลือกนั้นเข้ากับโทนและความรู้สึกของเนื้อหาในมุมมองการออกแบบของเรา </p>
 <h3> สี (Color) </h3>
-<p> ในส่วนของซีรีย์นี้ เราสรุปบทเรียนเกี่ยวกับทฤษฏีสี ความหมายของสีบางสี ระบบสีที่แตกต่างกันสำหรับเว็บไซต์ และทำอย่างไรที่จะเลือกถาดสีให้ประสบผลสำเร็จ </p>
+<p> ในส่วนของซีรีย์นี้ เราสรุปบทเรียนเกี่ยวกับทฤษฏีสี ความหมายของสีบางสี ระบบสีที่แตกต่างกันสำหรับเว็บไซต์ และทำอย่างไรที่จะเลือกชุดสีให้ประสบผลสำเร็จ </p>
 <p> ไปที่วงล้อสีปฐมภูมิและสีทุติยภูมิ ช่วยให้เราเข้าใจมากขึ้นในวิธีการสร้างสีนั้นขึ้นมาและทำมีบางสีถึงเข้ากับสีอื่นได้แต่บางสีนั้นไม่ </p>
 <figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/firstwheel11.svg"></figure><p> ถัดจากนี้ มาดูวิธีเอาเว็บไซต์นั้นขึ้นเว็บจริงๆ กันเสียที! </p>
 <h2> เอาไฟล์เว็บไซต์ขึ้นเว็บ </h2>
-<p> หลังจากที่เราคุยเกี่ยวกับการเริ่มต้นในซีรีย์นี้ เว็บไซต์นั้นวางไว้ locally ภายใต้คอมพิวเตอร์เดี่ยวๆ ที่ไม่ได้อยู่บนอินเทอร์เน็ต  ในจุดนี้ เราไม่สามารถส่งตรงถึงเพื่อนและครอบครัวเพื่อให้พวกเขาเข้ากัน ดังนั้นพวกเขาไม่สามารถดูงานที่น่าตื่นตาตื่นใจของเรา </p>
-<p> หลังจากที่เราได้คุยในบทเรียนแนะนำ ไฟล์ทั้งหมดต้องการที่อยู่บนเซิฟเวอร์ในฐานะที่คนอื่นดูพวกมันบนอินเทอร์เน็ต </p>
-<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/internet11.svg"></figure><h4> โน้ตสัน้ๆ ก่อนที่จะเดินหน้าถัดไป </h4>
-<p> การทำให้เว็บไซต์ขึ้นไปอยู่บนอินเทอร์เน็ตนั้นบ่อยครั้งเกี่ยวกับการซื้อและต้องมีการใช้อีเมล์  ถ้าคุณยังเด็กอยู่ที่จะดำเนินการสิ่งเหล่านี้ มันดีที่สุดที่จะเรียกผู้ใหญ่กว่ามาช่วยดำเนินการให้ </p>
+<p> หลังจากที่เราคุยเกี่ยวกับการเริ่มต้นในซีรีย์นี้ เว็บไซต์นั้นวางไว้ Locally หรือคอมพิวเตอร์ของเราที่อยู่เดี่ยวๆ ที่ไม่ได้อยู่บนอินเทอร์เน็ต  ในจุดนี้ เราไม่สามารถส่งตรงถึงเพื่อนและครอบครัวเพื่อให้พวกเขาเข้าถึง ดังนั้นพวกเขาไม่สามารถดูงานที่น่าตื่นตาตื่นใจของเราได้ </p>
+<p> หลังจากที่เราได้คุยในบทเรียนแนะนำ ไฟล์ทั้งหมดต้องการอยู่บนเซิฟเวอร์เพื่อให้คนอื่นดูพวกมันบนอินเทอร์เน็ต </p>
+<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/internet11.svg"></figure><h4> โน้ตสั้นๆ ก่อนที่จะเดินหน้าถัดไป </h4>
+<p> การทำให้เว็บไซต์ขึ้นไปอยู่บนอินเทอร์เน็ตนั้นบ่อยครั้งเกี่ยวกับการซื้อของออนไลน์และต้องมีการใช้อีเมล์  ถ้าคุณยังเด็กอยู่ที่จะดำเนินการสิ่งเหล่านี้ มันดีที่สุดที่จะเรียกผู้ใหญ่กว่ามาช่วยดำเนินการให้ </p>
 <h3> โฮสติ้ง (Hosting) </h3>
-<p> มีบริการจำนวนมากมายที่ช่วยให้เราโฮสต์ (<i>host</i>) หรือไฟล์ของเราไว้ ที่สามารถทำให้มันถูกเข้าถึงได้ผ่านอินเทอร์เน็ต  สำหรับซีรีย์นี้เราจะไปโฟกัสที่ NeoCities และแนวคิดพื้นฐานเกี่ยวกับโดเมนเนม </p>
+<p> มีบริการจำนวนมากมายที่ช่วยให้เราโฮสต์ (<i>Host</i>) หรือวางไฟล์ของเราไว้ ที่สามารถทำให้มันถูกเข้าถึงได้ผ่านอินเทอร์เน็ต  สำหรับซีรีย์นี้เราจะไปโฟกัสที่ NeoCities และแนวคิดพื้นฐานเกี่ยวกับโดเมนเนม </p>
 <h3> NeoCities </h3>
-<p> <a href="https://neocities.org/">NeoCities</a> นั้นเป็นตัวเลือกที่<i>ฟรีและยอดเยี่ยม</i>สำหรับการวางไฟล์ไว้บนเว็บ แม้ว่าเราจะยังต้องการอีเมล์แอดเดรสเพื่อลงทะเบียนเข้าใช้มัน </p>
-<p> ลองมาดูวิธีการเป็นขั้นๆ ในการเอาไฟล์ไปวางที่โฮสต์ที่นี่ </p>
+<p> <a href="https://neocities.org/">NeoCities</a> นั้นเป็นตัวเลือกที่<i>ฟรีและยอดเยี่ยม </i>สำหรับการวางไฟล์ไว้บนเว็บ แม้ว่าเราจะยังต้องการอีเมล์แอดเดรสเพื่อลงทะเบียนเข้าใช้มัน </p>
+<p> ลองมาดูวิธีการเป็นขั้นๆ ในการเอาไฟล์ไปวางบนโฮสต์ที่นี่ </p>
 <ul class="ul1">
 <li> เพื่อลงทะเบียน เราต้องการเลือก username (ชื่อเว็บไซต์) และใส่อีเมล์  ที่จุดๆ นี้เราต้องการใส่ชื่อเว็บด้วยบางอย่างที่แตกต่างจากอะไรที่เราสร้างด้านล่าง และชื่อของเว็บไซต์นั้นต้องทำให้มันไม่ซ้ำกับคนอื่น (unique)  ยกตัวอย่าง แทนที่จะใช้ <b>tutsplustown</b> เป็นชื่อ username คุณควรใช้บางอย่างที่ที่ยังไม่มีคนเลือกเช่นเพิ่มชื่อของคุณต่อเข้าไป <b>janetutsplustown</b> (อีกครั้ง เพียงแค่นี้จะมีให้ใช้และไม่เคยถูกใช้โดยผู้ใช้ NeoCities คนอื่นๆ  เว็บไซต์จะอยู่ที่ตำแหน่ง (<em>username</em>).neocities.org </li> <li> เพื่อเราลงทะเบียนเรียบร้อยแล้วทั้งหมด เราสามารถเลือกปุ่มสีแดงใหญ่ &quot;Edit Site&quot; ที่หัวด้านบนขวาของหน้าจอ </li> </ul>
 <figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/editsite11.svg"></figure><ul class="ul1">
-<li> เราจากนั้นมันจะพาเราไปที่ Dashboard ที่ๆ เราสามารถเพิ่มไฟล์และโฟลเดอร์  เราจะยังต้องการ <em>upload </em>ไฟล์สองไฟล์ ไฟล์ HTML และ ไฟล์ CSS สำหรับเว็บไซต์และสร้างโฟลเดอร์มาอีกหนึ่งคือ images  ภายใต้ images นั้นเราจะเพิ่มรูปสี่รูปเข้าไป </li> </ul>
+<li> เราจากนั้นมันจะพาเราไปที่ Dashboard ที่ๆ เราสามารถเพิ่มไฟล์และโฟลเดอร์  เรายังต้อง <em>upload </em>ไฟล์สองไฟล์ ไฟล์ HTML และ ไฟล์ CSS สำหรับเว็บไซต์และสร้างโฟลเดอร์มาอีกหนึ่งคือ images  ภายใต้ images นั้นเราจะเพิ่มรูปสี่รูปเข้าไป </li> </ul>
 <figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/neopreview11.svg"></figure><ul class="ul1">
 <li> เมื่อไฟล์นั้นได้ถูกส่งเข้าเว็บของเราแล้ว ก็จะถูกวางไว้ที่โฮสต์ NeoCities  มันก็จะมีลิ้งค์ไปยังเว็บไซต์ที่อยู่ด้านบนของเพจ </li> </ul>
 <figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/linkpreview11.svg"></figure><p> และนี่คือสิ่งที่เราเห็นเมื่อคลิก <a href="http://tutsplustown.neocities.org/">tutsplustown.neocities.org</a> </p>
-<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/neobrowser11.svg"></figure><p> ประโยชน์อื่นๆของบริการนี้คือคุณไม่ต้องการไปยุ่งเกี่ยวกับโดเมน (ที่อยู่ของเว็บไซต์ในรูปแบบอื่นๆ) หรือการซื้อโฮสติ้งและการติดตั้ง แม้ว่าจะเราจะลองวิธีนี้ถัดไปนี้เช่นกัน </p>
-<p><strong> สำคัญมาก! </strong>  มันเป็นไปได้ที่จะใช้โดเมนเนมแบบ custom กับ NeoCities โดยการไปที่การตั้งค่าเว็บไซต์ (site setting) หลังจากเริ่มติดตั้งและทำตามขั้นตอนที่ว่ามา แม้ว่าการทำแบบนี้ต้อง upgrade account ด้วยเงิน $5.00 USD (หรือประมาณ 150-200 บาท) เป็นรายเดือนก็ตาม </p>
+<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/neobrowser11.svg"></figure><p> ประโยชน์อื่นๆของบริการนี้คือคุณไม่ต้องการไปยุ่งเกี่ยวกับโดเมน (ที่อยู่ของเว็บไซต์ในรูปแบบอื่นๆ) หรือการซื้อโฮสติ้งและการติดตั้ง แม้ว่าจะเราจะลองวิธีถัดไปนี้เช่นกัน </p>
+<p><strong> สำคัญมาก! </strong>  มันเป็นไปได้ที่จะใช้โดเมนเนมแบบ custom กับ NeoCities โดยการไปที่การตั้งค่าเว็บไซต์ (site setting) หลังจากเริ่มติดตั้งและทำตามขั้นตอนที่ว่ามา แม้ว่าการทำแบบนี้ต้อง upgrade account ด้วยเงิน $5.00 USD (หรือประมาณ 150-200 บาท) แบบรายเดือนก็ตาม </p>
 <h3> โดเมน (Domain) </h3>
-<p> โดเมนนั้นคือที่อยู่เว็บแบบ custom หรือชื่อกำหนดเองที่เราชอบเพื่อให้ผู้ชมเยี่ยมเว็บนั้นพิมพ์เข้าไป  ขั้นตอนนี้นั้นไม่จำเป็นเมื่อเราใช้โฮสต์ของ NeoCities เพราะว่ามันสร้าง address พิเศษจาก NeoCities ให้พวกเรา  อย่างไรก็ตาม ถ้าเรากำลังมองหาโดเมนเนมแบบ custom จริงๆ (เช่น tutsplustown.com เป็นต้น) เราจะต้องชื่อโดเมนเนมอันนี้ </p>
+<p> โดเมนนั้นคือที่อยู่เว็บแบบ custom หรือชื่อกำหนดเองที่เราชอบเพื่อให้ผู้ชมเยี่ยมเว็บนั้นพิมพ์เข้าไป  ขั้นตอนนี้นั้นไม่จำเป็นเมื่อเราใช้โฮสต์ของ NeoCities เพราะว่ามันสร้าง address พิเศษจาก NeoCities ให้พวกเรา  อย่างไรก็ตาม ถ้าเรากำลังมองหาโดเมนเนมแบบ custom จริงๆ (เช่น tutsplustown.com เป็นต้น) เราจะต้องซื้อโดเมนเนมอันนี้ </p>
 <p> ด้วย NeoCities username ขงเรา โดเมนเนมนั้นจะ unique มันจะใช้เวลาบางช่วงค้นหาชื่อที่มันยังไม่ได้ถูกใช้ไป </p>
 <p> ที่นี่ยังมีบริการอีกจำนวนหนึ่งที่ช่วยให้เราซื้อโดเมนเนมเมื่อเราสร้าง account </p>
 <ul class="ul1">
@@ -66,7 +66,7 @@
 <h3> โดเมนเว็บเมืองในฝันของเรา </h3>
 <p> เว็บไซต์เมืองในฝันของเรามี address ของมันเองเหมือนกับที่เราได้ติดตั้งเราทดลองดูคือ <a href="http://tutsplustown.com/">tutsplustown.com</a> </p>
 <figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/browser11.svg"></figure><h2> แล้วถัดไปหล่ะ </h2>
-<p> ขณะที่ซีรีย์นี้ได้แนะนำตัวเกี่ยวกับการออกแบบเว้บ และ วิธีที่เร็วที่สุดสำหรับการพัฒนาทักษะฝีมือของเรา เราจำเป็นต้อง ฝึก ฝึก และ ฝึกด้วยหัวข้อด้านล่างนี้ </p>
+<p> ขณะที่ซีรีย์นี้ได้แนะนำตัวเกี่ยวกับการออกแบบเว็บ และ วิธีที่เร็วที่สุดสำหรับการพัฒนาทักษะฝีมือของเรา เราจำเป็นต้อง ฝึก ฝึก และ ฝึกด้วยหัวข้อด้านล่างนี้ </p>
 <h3> แหล่งความรู้ HTML และ CSS เพิ่มเติม </h3>
 <p> หนังสือ “Build Your Own Website, A Comic Guide to HTML, CSS, and Wordpress” เขียนโดย Nate Cooper จะให้ข้อมูลเกี่ยวการสร้างเว็บไซต์ผ่านเรื่องสนุกๆ ในรูปแบบการ์ตูน </p>
 <p> นอกจากนี้ Shay Howe ก็ได้เขียนซีรีย์ในระดับลึกสำหรับทั้งผู้เริ่มต้นและระดับสูงเกี่ยวกับ HTML และ CSS </p>
@@ -76,13 +76,13 @@
 <p> Responsive web design นั้นเกี่ยวกับการออกแบบเว็บไซต์ที่ทำให้หน้าจอต่างชนิดกันสามารถดูได้  เราจะใช้เวลาอย่างมากบน Smartphone ของเรา ยกตัวอย่างที่นักออกแบบ เราต้องการทำให้เว็บไซต์เหล่านี้ทำงานได้ดีในจอขนาดเล็กเหมือนกับจอขนาดใหญ่ของคอมพิวเตอร์ Desktop </p>
 <figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/responsive11.svg"></figure><p> และที่นี่ก็เหมาะเลยสำหรับผู้เริ่มต้น <a href="http://learn.shayhowe.com/advanced-html-css/responsive-web-design/">tutorial by Shay Howe on the topic</a> </p>
 <h3> หน่วยวัดต่างๆ (Units of Measurement) </h3>
-<p> เราได้ใช้หน่วย pixel ภายในซีรีย์นี้เป็นน่วยวัดบนเว็บ  การใช้ pixel นั้นค่อนข้าง OK เมื่อต้องเริ่มต้น อย่างไรก็ตาม ประสบการณ์ที่มากขึ้นจะทำให้คุณรู้ว่ามันมีข้อจำกัดอย่างไร  มันเป็นหน่วยหนึ่งที่ไม่ยืดหยุ่นเลย และมันใช้ได้ไม่ค่อยดีใน Responsive Design </p>
-<p> การฐานะการออกแบบข้ามจอหลายขนาด <a href="http://demosthenes.info/blog/775/Which-CSS-Measurements-To-Use-When">ยังมีตัวเลือกอื่นๆ</a> ที่ช่วยให้ pixel นั้นยืดหยุ่น เช่น <em>percentages</em> และ <em>rems</em> </p>
+<p> เราได้ใช้หน่วย pixel ภายในซีรีย์นี้เป็นน่วยวัดบนเว็บ  การใช้ pixel นั้นค่อนข้าง OK เมื่อเริ่มต้น อย่างไรก็ตาม ประสบการณ์ที่มากขึ้นจะทำให้คุณรู้ว่ามันมีข้อจำกัดอย่างไร  มันเป็นหน่วยหนึ่งที่ไม่ยืดหยุ่นเลย และมันใช้ได้ไม่ค่อยดีใน Responsive Design </p>
+<p> การฐานะการออกแบบข้ามจอหลายขนาด <a href="http://demosthenes.info/blog/775/Which-CSS-Measurements-To-Use-When">ยังมีตัวเลือกอื่นๆ</a> ที่ช่วยให้ pixel นั้นยืดหยุ่น เช่น <em>percentage</em> และ <em>rem</em> </p>
 <h3> เลย์เอ้าท์ </h3>
 <p> เมื่อเราจะคุยเรื่อง flexbox ใน CSS Layout ของบทเรียนนี้แล้ว มันยังมี Layout อีกหลายชนิดมากที่เราสามารถเรียนรู้เพื่อจะใช้มัน  มันมีสถานที่จำนวนหนึ่งสำหรับเรียนรู้ อย่างเช่นที่นี่ <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">Complete Guide to Flexbox</a> และที่ <a href="http://jonibologna.com/flexbox-cheatsheet/">Flexbox Cheatsheet diagram</a> </p>
 <p> เกี่ยวข้องกับ layout หลากหลายชนิดโดยรวมไม่ใช่แค่ Flexbox และยังมี <a href="http://learnlayout.com/">เว็บไซต์เล็กๆ เรียบร้อยๆ</a> ที่ช่วยให้เราเดินทางกลับสู่พื้นฐาน </p>
 <h2> มาฉลองกัน! </h2>
-<p> ขณะที่มีเรื่องมากมายที่เราสามารถเรียนเพื่อทำให้ทักษะการออกแบบเว็บของเราแข็งแกร่งขึ้น เราได้ประสบความสำเร็จมากมายผ่านซีรีย์นี้และจากนี้เราก็สามารถเข้าใจอะไรได้มากขึ้นมากทั้งพื้นฐานการออกแบบ และ การสร้างเว็บไซต์ </p>
-<p> เราได้นำเว็บไซต์จากภาพร่างบนกระดาษสู่เว็บไซต์จริงๆ ที่มี address ของเราเอง นี่คือทุกๆ วันที่ผ่านไปของนักออกแบบเว็บ </p>
-<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/farewell11.svg"></figure><p> เว็บไซต์เมืองในฝันของเรา จะสร้างความงดงามให้แก่ท่านผู้เข้ามาเยี่ยมชม มันใช้ง่ายและช่วยแนะนำเส้นทางให้แก่นักท่องเที่ยวใหม่ๆ ที่เข้ามาในเมือง ขอบพระคุณทุกท่านเป็นอย่างมากที่ติดตามซีรีย์นี้ตั้งแต่ต้นมา </p>
+<p> ขณะที่มีเรื่องมากมายที่เราสามารถเรียนเพื่อทำให้ทักษะการออกแบบเว็บของเราแข็งแกร่งขึ้น เราได้ประสบความสำเร็จมากมายผ่านซีรีย์นี้และจากนี้เราก็สามารถเข้าใจอะไรได้มากขึ้นทั้งพื้นฐานการออกแบบ และ การสร้างเว็บไซต์ </p>
+<p> เราได้นำเว็บไซต์จากภาพร่างบนกระดาษสู่เว็บไซต์จริงๆ ที่มี Address ของเราเอง นี่คือทุกๆ วันที่ผ่านไปของนักออกแบบเว็บ </p>
+<figure class="post_image"><img alt="" src="https://cms-assets.tutsplus.com/uploads/users/30/posts/24379/image/farewell11.svg"></figure><p> เว็บไซต์เมืองในฝันของเรา จะสร้างความงดงามให้แก่ท่านที่เข้ามาเยี่ยมชม มันใช้ง่ายและช่วยแนะนำเส้นทางให้แก่นักท่องเที่ยวใหม่ๆ ที่เข้ามาในเมือง ขอบพระคุณทุกท่านเป็นอย่างสูงที่ติดตามซีรีย์นี้ตั้งแต่ต้นมาขอขอบคุณ </p>
 </div> 
