--- a/web-design-for-kids-typography.html
+++ b/web-design-for-kids-typography.html
@@ -1,4 +1,4 @@
-﻿<div class="post-body__content">
+<div class="post-body__content">
 <h1> การทำเว็บไซต์สำหรับเด็ก - การออกแบบตัวอักษร (Typography) </h1>
 <p> ยินดีต้อนรับสู่บทเรียนที่เก้าของซีรีย์ <a href="https://webdesign.tutsplus.com/series/web-design-for-kids--cms-823" target="_self">การทำเว็บไซต์สำหรับเด็กของเรา</a> วันนี้เรามาคุยเรื่องการออกแบบตัวอักษรกัน </p>
 <p> ในบทเรียนนี้ เราจะเจาะลึกเกี่ยวกับรูปแบบตัวอักษรและทุกสิ่งทุกอย่างที่เกี่ยวกับมัน ทำไมมันถึงสำคัญสำหรับการออกแบบ  เราเคยได้คุยเกี่ยวกับประสบการณ์ผู้ใช้งานจำนวนมาก ดังนั้นและบทเรียนนี้ก็ไม่มีข้อยกเว้น เราจะทำงานอย่างหนักเพื่อให้แน่ใจว่าตัวอักษรของเราทุกตัวนั้นดูดีและง่ายต่อการอ่าน </p>
@@ -44,7 +44,7 @@
 <pre class="brush: css noskimlinks noskimwords">p {
     line-height: 2;
 }</pre>
-<p> ค่าของ <code class="inline">2</code> ที่นี่จะทำให้แน่ในว่า leading ของเรานั้นมีค่าสองเท่าของค่า default ที่ติดมากับ font </p>
+<p> ค่าของ <code class="inline">2</code> ที่นี่จะทำให้แน่ใจว่า leading ของเรานั้นมีค่าสองเท่าของค่า default ที่ติดมากับ font </p>
 <h2> Widows และ Orphans </h2>
 <p> ถ้าคำเดี่ยวๆ ถูกทิ้งไว้ในบรรทัดล่างสุดแล้ว ในส่วนท้ายของบล็อคนั้นเราจะเรียกมันว่า <em>Widow</em> </p>
 <p> ลองกล่าวว่า Block ในรูปที่ตามมานั้นแสดงคำภายในคอลัมน์  ถ้า Widow นั้นมีสีฟ้า วางไว้อยู่ในท้ายเพราะว่ามันเป็นส่วนที่ประโยคปิดเรียบร้อยแล้ว </p>
